--- a/SE-Assignment-2.vcxproj.filters
+++ b/SE-Assignment-2.vcxproj.filters
@@ -66,6 +66,12 @@
     <ClCompile Include="RentalCollection.cpp">
       <Filter>소스 파일\Entity</Filter>
     </ClCompile>
+    <ClCompile Include="BikeCollection.cpp">
+      <Filter>소스 파일\Entity</Filter>
+    </ClCompile>
+    <ClCompile Include="MemberCollection.cpp">
+      <Filter>소스 파일\Entity</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bike.h">
@@ -96,6 +102,12 @@
       <Filter>헤더 파일\Control</Filter>
     </ClInclude>
     <ClInclude Include="RentalCollection.h">
+      <Filter>헤더 파일\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="BikeCollection.h">
+      <Filter>헤더 파일\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="MemberCollection.h">
       <Filter>헤더 파일\Entity</Filter>
     </ClInclude>
   </ItemGroup>
