출력 파일 생성 구현

--- a/SE-Assignment-2.vcxproj
+++ b/SE-Assignment-2.vcxproj
@@ -136,7 +136,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Member.cpp" />
     <ClCompile Include="MemberCollection.cpp" />
-    <ClCompile Include="RegisterControl.cpp" />
+    <ClCompile Include="SignupControl.cpp" />
     <ClCompile Include="Rental.cpp" />
     <ClCompile Include="RentalCollection.cpp" />
     <ClCompile Include="RentalInfoControl.cpp" />
